hkjl; New files added - [AllTypesDBAutomation,FileService] Files modified - [Main,securityService,WEB-INF,profiles,webapp,.wmproject.properties,pom.xml]

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -3,7 +3,10 @@
     <wm-top-nav name="topnav" content="topnav"></wm-top-nav>
     <wm-content name="content">
         <wm-left-panel columnwidth="2" name="leftpanel" content="leftnav"></wm-left-panel>
-        <wm-page-content columnwidth="8" paddingleft="15" paddingright="15" name="mainContent">
+        <wm-page-content padding="unset 15px" columnwidth="8" name="mainContent">
+            <wm-fileupload operation="uploadFile" service="FileService" name="fileupload1"></wm-fileupload>
+            <wm-label caption="bind:Variables.serviceVariable1.dataSet" name="label1" padding="unset 0.5em"></wm-label>
+            <wm-label name="label2" padding="unset 0.5em"></wm-label>
         </wm-page-content>
         <wm-right-panel columnwidth="2" name="rightpanel" content="rightnav"></wm-right-panel>
     </wm-content>
